--- a/WcoeJobFairRegistration/Pages/AdminPage.xaml
+++ b/WcoeJobFairRegistration/Pages/AdminPage.xaml
@@ -21,27 +21,27 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
 
-                <CheckBox Content="Allow Manual Student Entry" IsChecked="{Binding IsManualEntry}" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"/>
+                <CheckBox Content="Allow Manual Student Entry" IsChecked="{Binding IsManualEntry}" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Margin="5"/>
 
-                <Label Grid.Row="1" Grid.Column="0" Style="{StaticResource LabelStyle}">Data Import Path:</Label>
+                <Label Grid.Row="1" Grid.Column="0" Style="{StaticResource LabelStyle}" Margin="5,5,0,5">Data Import Path:</Label>
                 <TextBox Text="{Binding Path=JobGridCsvFilePath, UpdateSourceTrigger=PropertyChanged}" Grid.Row="1" Grid.Column="1"
-                         VerticalContentAlignment="Center">
+                         VerticalContentAlignment="Center" Margin="0,5">
                     <TextBox.InputBindings>
                         <MouseBinding Command="{Binding CsvFileDialogCommand}" MouseAction="LeftClick"/>
                     </TextBox.InputBindings>
                 </TextBox>
                 <Button Content="Import" Command="{Binding ImportDataCommand}" ToolTip="Select student CSV from Job Grid"
-                        Grid.Row="1" Grid.Column="2"/>
+                        Grid.Row="1" Grid.Column="2" Margin="0,5,5,5"/>
 
-                <Label Grid.Row="2" Grid.Column="0" Style="{StaticResource LabelStyle}">Data Export Path:</Label>
+                <Label Grid.Row="2" Grid.Column="0" Style="{StaticResource LabelStyle}" Margin="5,5,0,5">Data Export Path:</Label>
                 <TextBox Text="{Binding Path=ReportingFolderPath, UpdateSourceTrigger=PropertyChanged}" Grid.Row="2" Grid.Column="1"
-                         VerticalContentAlignment="Center">
+                         VerticalContentAlignment="Center" Margin="0,5">
                     <TextBox.InputBindings>
                         <MouseBinding Command="{Binding ReportingFolderDialogCommand}" MouseAction="LeftClick"/>
                     </TextBox.InputBindings>
                 </TextBox>
                 <Button Content="Update" Command="{Binding UpdatePathCommand}" ToolTip="Select student CSV from Job Grid"
-                        Grid.Row="2" Grid.Column="2"/>
+                        Grid.Row="2" Grid.Column="2" Margin="0,5,5,5"/>
             </Grid>
         </GroupBox>
     </StackPanel>
