--- a/WcoeJobFairRegistration/Pages/ManualStudentPage.xaml
+++ b/WcoeJobFairRegistration/Pages/ManualStudentPage.xaml
@@ -8,35 +8,41 @@
       d:DesignHeight="400" d:DesignWidth="300"
       FocusManager.FocusedElement="{Binding ElementName=rNumber}"
       Title="StudentPage">
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+        <Image Source="..\Images\campus2.jpg" Grid.Column="0" Stretch="UniformToFill" />
+        <StackPanel Grid.Column="1" Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Label Content="Enter your information" Style="{StaticResource HeaderTextStyle}" />
+            <TextBlock Text="{Binding Path=RNumberError}"></TextBlock>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="3*" />
+                    <ColumnDefinition Width="8*" />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition />
+                    <RowDefinition />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
 
-    <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
-        <Label Content="Enter your information" Style="{StaticResource HeaderTextStyle}" />
-        <TextBlock Text="{Binding Path=RNumberError}"></TextBlock>
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="3*" />
-                <ColumnDefinition Width="8*" />
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition />
-                <RowDefinition />
-                <RowDefinition />
-                <RowDefinition />
-            </Grid.RowDefinitions>
+                <Label Grid.Column="0" Grid.Row="0" Style="{StaticResource LabelStyle}">R#</Label>
+                <TextBox x:Name="rNumber" Grid.Column="1" Grid.Row="0" Text="{Binding Path=RNumber, UpdateSourceTrigger=PropertyChanged}"
+                         Style="{StaticResource TextBoxStyle}" PreviewKeyDown="PreventWhitespace" PreviewTextInput="NumericTextValidation"
+                         MaxLength="8" />
 
-            <Label Grid.Column="0" Grid.Row="0" Style="{StaticResource LabelStyle}">R#</Label>
-            <TextBox x:Name="rNumber" Grid.Column="1" Grid.Row="0" Text="{Binding Path=RNumber, UpdateSourceTrigger=PropertyChanged}"
-                     Style="{StaticResource TextBoxStyle}" PreviewKeyDown="PreventWhitespace" PreviewTextInput="NumericTextValidation"
-                     MaxLength="8" />
+                <Label Grid.Row="1" Grid.Column="0" Style="{StaticResource LabelStyle}">First Name:</Label>
+                <TextBox Text="{Binding Path=FirstName, UpdateSourceTrigger=PropertyChanged}"  Grid.Row="1" Grid.Column="1" Style="{StaticResource TextBoxStyle}"/>
 
-            <Label Grid.Row="1" Grid.Column="0" Style="{StaticResource LabelStyle}">First Name:</Label>
-            <TextBox Text="{Binding Path=FirstName, UpdateSourceTrigger=PropertyChanged}"  Grid.Row="1" Grid.Column="1" Style="{StaticResource TextBoxStyle}"/>
+                <Label Grid.Row="2" Grid.Column="0" Style="{StaticResource LabelStyle}">Last Name:</Label>
+                <TextBox Text="{Binding Path=LastName, UpdateSourceTrigger=PropertyChanged}"  Grid.Row="2" Grid.Column="1" Style="{StaticResource TextBoxStyle}"/>
 
-            <Label Grid.Row="2" Grid.Column="0" Style="{StaticResource LabelStyle}">Last Name:</Label>
-            <TextBox Text="{Binding Path=LastName, UpdateSourceTrigger=PropertyChanged}"  Grid.Row="2" Grid.Column="1" Style="{StaticResource TextBoxStyle}"/>
-
-        </Grid>
-        <Button Style="{StaticResource ButtonStyle}" Command="{Binding PrintCommand}"
-                Content="Print"/>
-    </StackPanel>
+            </Grid>
+            <Button Style="{StaticResource ButtonStyle}" Command="{Binding PrintCommand}"
+                    Content="Print"/>
+        </StackPanel>
+    </Grid>
 </Page>
