--- a/WcoeJobFairRegistration/App.xaml
+++ b/WcoeJobFairRegistration/App.xaml
@@ -2,40 +2,48 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WcoeJobFairRegistration"
-             StartupUri="Pages/MainPage.xaml">
+             xmlns:control="clr-namespace:WcoeJobFairRegistration.Controls"
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
+        <Style x:Key="BaseStyle" TargetType="Control">
+            <Setter Property="FontFamily" Value="Trebuchet MS"/>
+            <Setter Property="FontSize" Value="16"/>
+        </Style>
+
+        <Style TargetType="Label" BasedOn="{StaticResource BaseStyle}">
+            <Setter Property="Margin" Value="0,10"/>
+            <Setter Property="HorizontalAlignment" Value="Right"/>
+        </Style>
+
         <!-- Header text style -->
-        <Style x:Key="HeaderTextStyle">
+        <Style x:Key="HeaderTextStyle" TargetType="Label" BasedOn="{StaticResource BaseStyle}">
             <Setter Property="Label.VerticalAlignment" Value="Center" />
             <Setter Property="Label.HorizontalAlignment" Value="Center" />
-            <Setter Property="Label.FontFamily" Value="Trebuchet MS" />
             <Setter Property="Label.FontWeight" Value="Bold" />
             <Setter Property="Label.FontSize" Value="18" />
             <Setter Property="Label.Foreground" Value="#990000" />
         </Style>
 
-        <!-- Button style -->
-        <Style x:Key="ButtonStyle" TargetType="{x:Type Button}">
-            <Setter Property="Margin" Value="10,25,10,25" />
+        <Style x:Key="BaseTextBoxStyle" TargetType="TextBox" BasedOn="{StaticResource BaseStyle}">
+            <Setter Property="MinWidth" Value="150"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="Margin" Value="0,10"/>
         </Style>
 
-        <!-- Label style -->
-        <Style x:Key="LabelStyle" TargetType="{x:Type Label}">
-            <Setter Property="VerticalAlignment" Value="Center" />
-            <Setter Property="HorizontalAlignment" Value="Right" />
-            <Setter Property="FontFamily" Value="Trebuchet MS" />
+        <Style TargetType="TextBox" BasedOn="{StaticResource BaseTextBoxStyle}">
         </Style>
 
-        <!-- TextBox style -->
-        <Style x:Key="TextBoxStyle" TargetType="{x:Type TextBox}">
-            <Setter Property="Margin" Value="3,3,10,3" />
-            <Setter Property="VerticalContentAlignment" Value="Center"></Setter>
+        <Style TargetType="control:FocusTextBox" BasedOn="{StaticResource BaseTextBoxStyle}">
         </Style>
 
-        <!-- Checkbox style -->
-        <Style x:Key="CheckBoxStyle" TargetType="{x:Type CheckBox}">
-            <Setter Property="Margin" Value="3,3,10,3" />
-            <Setter Property="VerticalContentAlignment" Value="Center"></Setter>
+        <Style TargetType="Button" BasedOn="{StaticResource BaseStyle}">
+            <Setter Property="MinHeight" Value="30"/>
+            <Setter Property="Margin" Value="10"/>
         </Style>
+
+        <Style TargetType="GroupBox" BasedOn="{StaticResource BaseStyle}">
+            <Setter Property="Padding" Value="10"/>
+        </Style>
+
     </Application.Resources>
 </Application>
