--- a/WcoeJobFairRegistration/Pages/AdminPage.xaml
+++ b/WcoeJobFairRegistration/Pages/AdminPage.xaml
@@ -5,15 +5,14 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:WcoeJobFairRegistration.Pages"
       mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
-      Title="AdminPage">
-    <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-        <GroupBox Header="Data Management" Padding="16" Width="400">
+      d:DesignHeight="600" d:DesignWidth="800"
+      Title="Administrative Settings">
+        <GroupBox Header="Data Management" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="8*"/>
-                    <ColumnDefinition Width="3*"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition/>
@@ -21,28 +20,27 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
 
-                <CheckBox Content="Allow Manual Student Entry" IsChecked="{Binding IsManualEntry}" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Margin="5"/>
+                <CheckBox Content="Allow manual student entry" IsChecked="{Binding IsManualEntry}" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Margin="5"/>
 
-                <Label Grid.Row="1" Grid.Column="0" Style="{StaticResource LabelStyle}" Margin="5,5,0,5">Data Import Path:</Label>
+                <Label Grid.Row="1" Grid.Column="0" Margin="5" VerticalAlignment="Center">Data Import Path:</Label>
                 <TextBox Text="{Binding Path=JobGridCsvFilePath, UpdateSourceTrigger=PropertyChanged}" Grid.Row="1" Grid.Column="1"
-                         VerticalContentAlignment="Center" Margin="0,5">
+                         VerticalContentAlignment="Center" Margin="5">
                     <TextBox.InputBindings>
                         <MouseBinding Command="{Binding CsvFileDialogCommand}" MouseAction="LeftClick"/>
                     </TextBox.InputBindings>
                 </TextBox>
                 <Button Content="Import" Command="{Binding ImportDataCommand}" ToolTip="Select student CSV from Job Grid"
-                        Grid.Row="1" Grid.Column="2" Margin="0,5,5,5"/>
+                        Grid.Row="1" Grid.Column="2" Margin="5" Padding="10"/>
 
-                <Label Grid.Row="2" Grid.Column="0" Style="{StaticResource LabelStyle}" Margin="5,5,0,5">Data Export Path:</Label>
+                <Label Grid.Row="2" Grid.Column="0" Margin="5" VerticalAlignment="Center">Data Export Path:</Label>
                 <TextBox Text="{Binding Path=ReportingFolderPath, UpdateSourceTrigger=PropertyChanged}" Grid.Row="2" Grid.Column="1"
-                         VerticalContentAlignment="Center" Margin="0,5">
+                         VerticalContentAlignment="Center" Margin="5">
                     <TextBox.InputBindings>
                         <MouseBinding Command="{Binding ReportingFolderDialogCommand}" MouseAction="LeftClick"/>
                     </TextBox.InputBindings>
                 </TextBox>
                 <Button Content="Update" Command="{Binding UpdatePathCommand}" ToolTip="Select student CSV from Job Grid"
-                        Grid.Row="2" Grid.Column="2" Margin="0,5,5,5"/>
+                        Grid.Row="2" Grid.Column="2" Margin="5" Padding="10"/>
             </Grid>
         </GroupBox>
-    </StackPanel>
 </Page>
