--- a/WcoeJobFairRegistration/Pages/ManualStudentPage.xaml
+++ b/WcoeJobFairRegistration/Pages/ManualStudentPage.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:WcoeJobFairRegistration.Pages"
       mc:Ignorable="d" 
-      d:DesignHeight="400" d:DesignWidth="300"
+      d:DesignHeight="600" d:DesignWidth="800"
       FocusManager.FocusedElement="{Binding ElementName=rNumber}"
       Title="StudentPage">
     <Grid>
@@ -19,8 +19,8 @@
             <TextBlock Text="{Binding Path=RNumberError}"></TextBlock>
             <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="3*" />
-                    <ColumnDefinition Width="8*" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition />
@@ -29,20 +29,19 @@
                     <RowDefinition />
                 </Grid.RowDefinitions>
 
-                <Label Grid.Column="0" Grid.Row="0" Style="{StaticResource LabelStyle}">R#</Label>
-                <TextBox x:Name="rNumber" Grid.Column="1" Grid.Row="0" Text="{Binding Path=RNumber, UpdateSourceTrigger=PropertyChanged}"
-                         Style="{StaticResource TextBoxStyle}" PreviewKeyDown="PreventWhitespace" PreviewTextInput="NumericTextValidation"
+                <Label Grid.Column="0" Grid.Row="0" >R#</Label>
+                <TextBox Grid.Column="1" Grid.Row="0" Text="{Binding Path=RNumber, UpdateSourceTrigger=PropertyChanged}"
+                         PreviewKeyDown="PreventWhitespace" PreviewTextInput="NumericTextValidation"
                          MaxLength="8" />
 
-                <Label Grid.Row="1" Grid.Column="0" Style="{StaticResource LabelStyle}">First Name:</Label>
-                <TextBox Text="{Binding Path=FirstName, UpdateSourceTrigger=PropertyChanged}"  Grid.Row="1" Grid.Column="1" Style="{StaticResource TextBoxStyle}"/>
+                <Label Grid.Row="1" Grid.Column="0" >First Name:</Label>
+                <TextBox Text="{Binding Path=FirstName, UpdateSourceTrigger=PropertyChanged}"  Grid.Row="1" Grid.Column="1" />
 
-                <Label Grid.Row="2" Grid.Column="0" Style="{StaticResource LabelStyle}">Last Name:</Label>
-                <TextBox Text="{Binding Path=LastName, UpdateSourceTrigger=PropertyChanged}"  Grid.Row="2" Grid.Column="1" Style="{StaticResource TextBoxStyle}"/>
+                <Label Grid.Row="2" Grid.Column="0" >Last Name:</Label>
+                <TextBox Text="{Binding Path=LastName, UpdateSourceTrigger=PropertyChanged}"  Grid.Row="2" Grid.Column="1" />
 
             </Grid>
-            <Button Style="{StaticResource ButtonStyle}" Command="{Binding PrintCommand}"
-                    Content="Print"/>
+            <Button Command="{Binding PrintCommand}" Content="Print"/>
         </StackPanel>
     </Grid>
 </Page>
