--- a/WcoeJobFairRegistration/Pages/StudentPage.xaml
+++ b/WcoeJobFairRegistration/Pages/StudentPage.xaml
@@ -26,6 +26,8 @@
                     <RowDefinition />
                     <RowDefinition />
                     <RowDefinition />
+                    <RowDefinition />
+                    <RowDefinition />
                 </Grid.RowDefinitions>
 
                 <Label Grid.Column="0" Grid.Row="0">R#</Label>
